Comments and bug fix.

--- a/PW_Interview_Project/RGDetailViewController.xib
+++ b/PW_Interview_Project/RGDetailViewController.xib
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eventBackgroundTest" translatesAutoresizingMaskIntoConstraints="NO" id="v7U-z1-uwj">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eventBackgroundTest" translatesAutoresizingMaskIntoConstraints="NO" id="v7U-z1-uwj">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="250"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="250" id="DMS-fb-jn7"/>
